<resources>
    <string name="app_name">TaskAway</string>
    <string name="activity_main">MainActivity</string>
    <string name="activity_login">Login</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_button">LOGIN</string>
    <string name="name_tag">Name</string>
    <string name="edit_name">Task Name</string>
    <string name="req_tag">Requirements</string>
    <string name="edit_req"> </string>
    <string name="price_tag">Price</string>
    <string name="edit_price">0.00</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="edit_button">EDIT</string>
    <string name="my_task_name"> </string>
    <string name="my_task_details"> </string>"
    <string name="location">Location: </string>
    <string name="my_task_location"> </string>
    <string name="location_detail_button">LOCATION DETAILS</string>
    <string name="status">Status: </string>
    <string name="my_task_status"> </string>
    <string name="lowest_bid">Lowest Bid:</string>
    <string name="lowest_bid_username"> </string>
    <string name="lowest_bid_amount"> </string>
    <string name="accept_button">ACCEPT</string>
    <string name="other_bids_button">other bids</string>
    <string name="task_name"> </string>
    <string name="task_details"> </string>
    <string name="task_location"> </string>
    <string name="asking_price">Asking Price:</string>
    <string name="winning_bid">Winning Bid:</string>
    <string name="your_price">Your Price:</string>
    <string name="asking_price_amount"> </string>
    <string name="winning_bid_amount"> </string>
    <string name="your_price_amount">$0.00</string>
    <string name="old">Old:</string>
    <string name="new_price">New Price:</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="delete_task">Delete</string>
    <string name="status_tag">Status</string>
    <string name="status_edit"> </string>
    <string name="cancel_button2">Cancel</string>
    <string name="save_button2">Save</string>
    <string name="upload_pic">Upload Pictures</string>
    <string name="view_pic">Photos</string>
    <string name="upload_gallery">Upload from Gallery</string>
    <string name="okay_button">OK</string>
    <string name="new_bid">New Bid:</string>
    <string name="decline">Decline</string>
    <string name="all_bids">All Bids</string>

    <string-array name="phoneOptions">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>

</resources>
