<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taskaway.AddActivity">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorEditButton"
        android:text="@string/edit_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_task_name"
        android:layout_width="177dp"
        android:layout_height="30dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/requirements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/my_task_details"
        android:layout_width="185dp"
        android:layout_height="104dp"
        android:layout_marginBottom="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="265dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/location"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_task_details" />

    <TextView
        android:id="@+id/my_task_location"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_task_location"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toStartOf="@+id/location_detail_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <Button
        android:id="@+id/location_detail_button"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorDarkGreen"
        android:text="@string/location_detail_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/my_task_location"
        app:layout_constraintTop_toBottomOf="@+id/my_task_details" />

    <TextView
        android:id="@+id/status"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_task_location" />

    <TextView
        android:id="@+id/my_task_status"
        android:layout_width="93dp"
        android:layout_height="19dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/my_task_status"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/lowest_bid_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/location_detail_button"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/lowest_bid"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="295dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/lowest_bid"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/users_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/lowest_bid_username"
        android:layout_width="218dp"
        android:layout_height="22dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/lowest_bid_username"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/lowest_bid_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowest_bid" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccept"
        android:text="@string/accept_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/other_bids_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/other_bids_button"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="48dp"
        android:background="@color/colorOtherBids"
        android:text="@string/all_bids"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/requirements"
        android:layout_width="89dp"
        android:layout_height="21dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/req_tag"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/my_task_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/users_image"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/accept_button"
        app:layout_constraintEnd_toStartOf="@+id/lowest_bid_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowest_bid"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/lowest_bid_amount"
        android:layout_width="212dp"
        android:layout_height="23dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/accept_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowest_bid_username" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#1f427e"
        android:text="@string/view_pic"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>